Atualização do index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+	<head>
+		<meta charset=”UTF-8>
+		<title>DRI VELAS</title>
+	</head>
+	<body>
+		<h1>DRI VELAS</h1>
 
-<title>DRI VELAS</title>
-
-<h1>DRI VELAS</h1>
-
-<p><em><strong>          "Velejar é preciso"</strong></em></p>
-
-<p>Reparos, reformas, pequenas soluções para sua vela.</p>
+		<p><em><strong>          "Velejar é preciso"</strong></em></p>
+		
+		<p>Reparos, reformas, pequenas soluções para sua vela.</p>
+	</body>
 
 </html>
