--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-		<meta charset=”UTF-8>
-		<title>DRI VELAS</title>
-	</head>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <title> DRI VELAS </title>  
+    <link rel="stylesheet" href="style.css">
+</head>
 	<body>
 		<h1>DRI VELAS</h1>
 
