--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 	<body>
-		<h1>DRI VELAS</h1>
+		<imag src"barco.png"
+        
+        <h1>DRI VELAS</h1>
 
-		<p><em><strong>          "Velejar é preciso"</strong></em></p>
+		<p><em><strong>"Velejar é preciso"</strong></em></p>
 		
 		<p>Reparos, reformas, pequenas soluções para sua vela.</p>
+
+		<p>Contato: adriana.novak@escola.pr.gov.br </p>
+		
 	</body>
 
 </html>
