--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 	<body>
-		<imag src"barco.png"
+		<imag src="barco.png">
         
         <h1>DRI VELAS</h1>
 
@@ -14,7 +14,7 @@
 		
 		<p>Reparos, reformas, pequenas soluções para sua vela.</p>
 
-		<p>Contato: adriana.novak@escola.pr.gov.br </p>
+		<p id="contato"> <em>Contato: adriana.novak@escola.pr.gov.br</em> </p>
 		
 	</body>
 
