--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 	<body>
-		<imag src="barco.png">
-        
+		<img src="barco.png">
+                   
         <h1>DRI VELAS</h1>
 
 		<p><em><strong>"Velejar é preciso"</strong></em></p>
