--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <title> DRI VELAS </title>  
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset='utf-8'>
+        <title> DRI VELAS </title>  
+        <link rel="stylesheet" href="style.css">
+    </head>
+    
 	<body>
-		<img src="barco.png">
+		<img id="barco" src="barco.png">
                    
         <h1>DRI VELAS</h1>
 
