--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="itens">* Recosturas</li>
             </ul>
 
-            <img src="barco1.jpg" class="barco1">
+            <img src="vela.jpg" class="vela"> 
 
         </div> 
 	
