Descrição das imagens

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
 	<body>
-		<img id="barco" src="barco.png">
+		<img id="barco" alt="Olhar de dentro do barco para o oceano" src="barco.png">
         <div class="PRINCIPAL">          
             <h1>DRI VELAS</h1>
 
@@ -30,7 +30,7 @@
                 <li class="itens">* Recosturas</li>
             </ul>
 
-            <img src="vela.jpg" class="vela"> 
+            <img src="vela.jpg" alt="Vela estendida em um gramado, rasgada ao meio" class="vela"> 
 
         </div> 
 	
